--- a/heliconia/css/menu.css
+++ b/heliconia/css/menu.css
@@ -351,36 +351,36 @@
 }
 .pi-section-white .pi-menu > li:hover {
   background: #f8fafa;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu > li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu > li.active {
   background: #f8fafa;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu > li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu > li.active:hover {
   background: #f8fafa;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu > li.active:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown > a:after {
   color: #4d5258;
 }
 .pi-section-white .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-items-have-borders > li {
   border-color: #eef1f1;
@@ -461,25 +461,25 @@
   border-top-color: transparent;
 }
 .pi-section-white .pi-menu.pi-menu-hover-border > li:hover > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-menu-hover-border > li.active > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-menu-hover-border > li.active:hover > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-has-hover-border > li > a:before {
   border-color: transparent;
 }
 .pi-section-white .pi-menu.pi-has-hover-border > li:hover > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-has-hover-border > li.active > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-white .pi-menu.pi-has-hover-border > li.active:hover > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-grey .pi-menu > li {
   background: transparent;
@@ -490,36 +490,36 @@
 }
 .pi-section-grey .pi-menu > li:hover {
   background: #fafbfc;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu > li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu > li.active {
   background: #fafbfc;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu > li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu > li.active:hover {
   background: #fafbfc;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu > li.active:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown > a:after {
   color: #2e343c;
 }
 .pi-section-grey .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-items-have-borders > li {
   border-color: #e6eaea;
@@ -600,25 +600,25 @@
   border-top-color: transparent;
 }
 .pi-section-grey .pi-menu.pi-menu-hover-border > li:hover > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-menu-hover-border > li.active > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-menu-hover-border > li.active:hover > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-has-hover-border > li > a:before {
   border-color: transparent;
 }
 .pi-section-grey .pi-menu.pi-has-hover-border > li:hover > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-has-hover-border > li.active > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-grey .pi-menu.pi-has-hover-border > li.active:hover > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-base .pi-menu > li {
   background: transparent;
@@ -768,36 +768,36 @@
 }
 .pi-section-dark .pi-menu > li:hover {
   background: #262b31;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu > li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu > li.active {
   background: #262b31;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu > li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu > li.active:hover {
   background: #262b31;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu > li.active:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown > a:after {
   color: #bfc8cd;
 }
 .pi-section-dark .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-items-have-borders > li {
   border-color: #2e343a;
@@ -878,25 +878,25 @@
   border-top-color: transparent;
 }
 .pi-section-dark .pi-menu.pi-menu-hover-border > li:hover > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-menu-hover-border > li.active > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-menu-hover-border > li.active:hover > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-has-hover-border > li > a:before {
   border-color: transparent;
 }
 .pi-section-dark .pi-menu.pi-has-hover-border > li:hover > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-has-hover-border > li.active > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-dark .pi-menu.pi-has-hover-border > li.active:hover > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-parallax .pi-menu > li {
   background: transparent;
@@ -1017,25 +1017,25 @@
   border-top-color: transparent;
 }
 .pi-section-parallax .pi-menu.pi-menu-hover-border > li:hover > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-parallax .pi-menu.pi-menu-hover-border > li.active > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-parallax .pi-menu.pi-menu-hover-border > li.active:hover > a:before {
-  border-top-color: #8eba3e;
+  border-top-color: #18ba60;
 }
 .pi-section-parallax .pi-menu.pi-has-hover-border > li > a:before {
   border-color: transparent;
 }
 .pi-section-parallax .pi-menu.pi-has-hover-border > li:hover > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-parallax .pi-menu.pi-has-hover-border > li.active > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-parallax .pi-menu.pi-has-hover-border > li.active:hover > a:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-white .pi-simple-menu > li {
   color: #21252b;
@@ -1044,40 +1044,40 @@
   color: #21252b;
 }
 .pi-section-white .pi-simple-menu > li:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-simple-menu > li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-simple-menu > li.active {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-simple-menu > li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-simple-menu.pi-has-hover-border > li > a > span:before {
   border-color: transparent;
 }
 .pi-section-white .pi-simple-menu.pi-has-hover-border > li:hover > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-white .pi-simple-menu.pi-has-hover-border > li.active > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-white .pi-simple-menu.pi-has-hover-border > li.active:hover > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-white .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown > a:after {
   color: #4d5258;
 }
 .pi-section-white .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu > li {
   color: #373942;
@@ -1086,40 +1086,40 @@
   color: #373942;
 }
 .pi-section-grey .pi-simple-menu > li:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu > li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu > li.active {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu > li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu.pi-has-hover-border > li > a > span:before {
   border-color: transparent;
 }
 .pi-section-grey .pi-simple-menu.pi-has-hover-border > li:hover > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu.pi-has-hover-border > li.active > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu.pi-has-hover-border > li.active:hover > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown > a:after {
   color: #4b4d55;
 }
 .pi-section-grey .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown.active:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-base .pi-simple-menu > li {
   color: #ffffff;
@@ -1170,28 +1170,28 @@
   color: #bfc8cd;
 }
 .pi-section-dark .pi-simple-menu > li:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-simple-menu > li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-simple-menu > li.active {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-simple-menu > li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-simple-menu.pi-has-hover-border > li > a > span:before {
   border-color: transparent;
 }
 .pi-section-dark .pi-simple-menu.pi-has-hover-border > li:hover > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-dark .pi-simple-menu.pi-has-hover-border > li.active > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-dark .pi-simple-menu.pi-has-hover-border > li.active:hover > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-dark .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown > a:after {
   color: #cdcdd5;
@@ -1227,13 +1227,13 @@
   border-color: transparent;
 }
 .pi-section-parallax .pi-simple-menu.pi-has-hover-border > li:hover > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-parallax .pi-simple-menu.pi-has-hover-border > li.active > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-parallax .pi-simple-menu.pi-has-hover-border > li.active:hover > a > span:before {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-parallax .pi-simple-menu.pi-items-has-dd-sign > li.pi-has-dropdown > a:after {
   color: #c7c7ce;
@@ -1256,36 +1256,36 @@
 }
 .pi-submenu-white li:hover {
   background: #f8fafa;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white li.active {
   background: #f8fafa;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white li.active:hover {
   background: #f8fafa;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white li.active:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white.pi-items-has-dd-sign li.pi-has-dropdown > a:after {
   color: #4d5258;
 }
 .pi-submenu-white.pi-items-has-dd-sign li.pi-has-dropdown:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white.pi-items-has-dd-sign li.pi-has-dropdown.active > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white.pi-items-has-dd-sign li.pi-has-dropdown.active:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-white.pi-has-shadow {
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
@@ -1299,7 +1299,7 @@
 }
 .pi-submenu-white.pi-has-border,
 .pi-submenu-white.pi-has-border .pi-submenu {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-submenu-white.pi-items-have-borders li {
   border-color: #eef1f1;
@@ -1337,36 +1337,36 @@
 }
 .pi-submenu-grey li:hover {
   background: #fafbfc;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey li.active {
   background: #fafbfc;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey li.active:hover {
   background: #fafbfc;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey li.active:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey.pi-items-has-dd-sign li.pi-has-dropdown > a:after {
   color: #666970;
 }
 .pi-submenu-grey.pi-items-has-dd-sign li.pi-has-dropdown:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey.pi-items-has-dd-sign li.pi-has-dropdown.active > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey.pi-items-has-dd-sign li.pi-has-dropdown.active:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-grey.pi-has-shadow {
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
@@ -1380,7 +1380,7 @@
 }
 .pi-submenu-grey.pi-has-border,
 .pi-submenu-grey.pi-has-border .pi-submenu {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-submenu-grey.pi-items-have-borders li {
   border-color: #e6eaea;
@@ -1499,36 +1499,36 @@
 }
 .pi-submenu-dark li:hover {
   background: #21262c;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark li:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark li.active {
   background: #21262c;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark li.active > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark li.active:hover {
   background: #21262c;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark li.active:hover > a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark.pi-items-has-dd-sign li.pi-has-dropdown > a:after {
   color: #9dadb4;
 }
 .pi-submenu-dark.pi-items-has-dd-sign li.pi-has-dropdown:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark.pi-items-has-dd-sign li.pi-has-dropdown.active > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark.pi-items-has-dd-sign li.pi-has-dropdown.active:hover > a:after {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-submenu-dark.pi-has-shadow {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
@@ -1542,7 +1542,7 @@
 }
 .pi-submenu-dark.pi-has-border,
 .pi-submenu-dark.pi-has-border .pi-submenu {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-submenu-dark.pi-items-have-borders li {
   border-color: #262c33;
@@ -1572,16 +1572,16 @@
   background: #242a30;
 }
 .pi-submenu-wide-white.pi-has-border {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-submenu-wide-grey.pi-has-border {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-submenu-wide-base.pi-has-border {
   border-color: #048949;
 }
 .pi-submenu-wide-dark.pi-has-border {
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-base .pi-submenu-base.pi-has-border,
 .pi-section-base .pi-submenu-dark.pi-has-border {
