--- a/heliconia/css/slider.css
+++ b/heliconia/css/slider.css
@@ -195,10 +195,10 @@
   bottom: -15px;
 }
 .pi-slider-page-active {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-slider-pagination-inside .pi-slider-page-active {
-  background: #8eba3e;
+  background: #18ba60;
   -webkit-box-shadow: inset 0 1px 0 rgba(250, 250, 250, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: inset 0 1px 0 rgba(250, 250, 250, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 0 rgba(250, 250, 250, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1);
