--- a/heliconia/css/social.css
+++ b/heliconia/css/social.css
@@ -1134,7 +1134,7 @@
   color: #3b3e3f;
 }
 .pi-section-white .pi-social-icons a:hover {
-  background: #8eba3e;
+  background: #18ba60;
   color: #ffffff;
 }
 .pi-section-white .pi-social-icons.pi-dark-opacity a {
@@ -1153,7 +1153,7 @@
   background: #eef1f1;
 }
 .pi-section-white .pi-social-icons.pi-jump-bg a i:first-child {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-white .pi-social-icons.pi-jump a i:last-child,
 .pi-section-white .pi-social-icons.pi-jump a:hover i:last-child {
@@ -1176,7 +1176,7 @@
 }
 .pi-section-white .pi-social-icons.pi-full-height a:hover {
   background: #f8fafa;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-social-icons.pi-full-height.pi-bordered li {
   border-color: #eef1f1;
@@ -1207,7 +1207,7 @@
   text-shadow: 0 1px 0 #ffffff;
 }
 .pi-section-white .pi-social-icons-simple a:hover {
-  color: #8eba3e;
+  color: #18ba60;
   text-shadow: 0 1px 0 #ffffff;
 }
 .pi-section-grey .pi-social-icons a {
@@ -1215,7 +1215,7 @@
   color: #2e343c;
 }
 .pi-section-grey .pi-social-icons a:hover {
-  background: #8eba3e;
+  background: #18ba60;
   color: #ffffff;
 }
 .pi-section-grey .pi-social-icons.pi-dark-opacity a {
@@ -1234,7 +1234,7 @@
   background: #ffffff;
 }
 .pi-section-grey .pi-social-icons.pi-jump-bg a i:first-child {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-grey .pi-social-icons.pi-jump a i:last-child,
 .pi-section-grey .pi-social-icons.pi-jump a:hover i:last-child {
@@ -1257,7 +1257,7 @@
 }
 .pi-section-grey .pi-social-icons.pi-full-height a:hover {
   background: #fafbfc;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-social-icons.pi-full-height.pi-bordered li {
   border-color: #e6eaea;
@@ -1288,7 +1288,7 @@
   text-shadow: 0 1px 0 #ffffff;
 }
 .pi-section-grey .pi-social-icons-simple a:hover {
-  color: #8eba3e;
+  color: #18ba60;
   text-shadow: 0 1px 0 #ffffff;
 }
 .pi-section-dark .pi-social-icons a {
@@ -1296,7 +1296,7 @@
   color: #b0bac2;
 }
 .pi-section-dark .pi-social-icons a:hover {
-  background: #8eba3e;
+  background: #18ba60;
   color: #ffffff;
 }
 .pi-section-dark .pi-social-icons.pi-dark-opacity a {
@@ -1315,7 +1315,7 @@
   background: #2b3139;
 }
 .pi-section-dark .pi-social-icons.pi-jump-bg a i:first-child {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-dark .pi-social-icons.pi-jump a i:last-child,
 .pi-section-dark .pi-social-icons.pi-jump a:hover i:last-child {
@@ -1338,7 +1338,7 @@
 }
 .pi-section-dark .pi-social-icons.pi-full-height a:hover {
   background: #282d33;
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-social-icons.pi-full-height.pi-bordered li {
   border-color: #2e343a;
@@ -1369,7 +1369,7 @@
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
 .pi-section-dark .pi-social-icons-simple a:hover {
-  color: #8eba3e;
+  color: #18ba60;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
 .pi-section-parallax .pi-social-icons a {
@@ -1377,7 +1377,7 @@
   color: #ffffff;
 }
 .pi-section-parallax .pi-social-icons a:hover {
-  background: #8eba3e;
+  background: #18ba60;
   color: #ffffff;
 }
 .pi-section-parallax .pi-social-icons.pi-dark-opacity a {
@@ -1396,7 +1396,7 @@
   background: rgba(250, 250, 250, 0.1);
 }
 .pi-section-parallax .pi-social-icons.pi-jump-bg a i:first-child {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-parallax .pi-social-icons.pi-jump a i:last-child,
 .pi-section-parallax .pi-social-icons.pi-jump a:hover i:last-child {
@@ -1450,7 +1450,7 @@
   text-shadow: 0 1px 0 #141517;
 }
 .pi-section-parallax .pi-social-icons-simple a:hover {
-  color: #8eba3e;
+  color: #18ba60;
   text-shadow: 0 1px 0 #141517;
 }
 .pi-social-icons.pi-active-bg li a:hover,
