--- a/heliconia/css/tables.css
+++ b/heliconia/css/tables.css
@@ -318,7 +318,7 @@ table.pi-table.pi-table-all-borders tfoot:first-child tr:first-child td {
   border-color: #1cc36d;
 }
 .pi-section-base table.pi-table.pi-table-complex thead tr th {
-  background: #8eba3e;
+  background: #18ba60;
   color: #ffffff;
   border-color: #21d178;
 }
