--- a/heliconia/css/testimonials.css
+++ b/heliconia/css/testimonials.css
@@ -150,12 +150,12 @@
 .pi-section-base .pi-testimonial-content.pi-testimonial-base,
 .pi-section-dark .pi-testimonial-content.pi-testimonial-base,
 .pi-section-parallax .pi-testimonial-content.pi-testimonial-base {
-  background: #8eba3e;
+  background: #18ba60;
   color: #ffffff;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  border-color: #8eba3e;
+  border-color: #18ba60;
 }
 .pi-section-white .pi-testimonial-content.pi-testimonial-base:after,
 .pi-section-grey .pi-testimonial-content.pi-testimonial-base:after,
