--- a/heliconia/css/typo.css
+++ b/heliconia/css/typo.css
@@ -671,7 +671,7 @@ pre code {
 .pi-section-base .h5.pi-has-base-border:after,
 .pi-section-base h6.pi-has-base-border:after,
 .pi-section-base .h6.pi-has-base-border:after {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-base h1.pi-has-bg:after,
 .pi-section-base .h1.pi-has-bg:after,
@@ -881,7 +881,7 @@ pre code {
 .pi-section-white .h5.pi-has-base-border:after,
 .pi-section-white h6.pi-has-base-border:after,
 .pi-section-white .h6.pi-has-base-border:after {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-white h1.pi-has-bg:after,
 .pi-section-white .h1.pi-has-bg:after,
@@ -923,7 +923,7 @@ pre code {
 .pi-section-white .h5 a.pi-link-dark:hover,
 .pi-section-white h6 a.pi-link-dark:hover,
 .pi-section-white .h6 a.pi-link-dark:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white h1 a.pi-link-white,
 .pi-section-white .h1 a.pi-link-white,
@@ -979,7 +979,7 @@ pre code {
 .pi-section-white .h5 a.pi-link-no-style:hover,
 .pi-section-white h6 a.pi-link-no-style:hover,
 .pi-section-white .h6 a.pi-link-no-style:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white abbr,
 .pi-section-white acronym,
@@ -989,16 +989,16 @@ pre code {
   font-weight: 600;
 }
 .pi-section-white a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white a:hover {
-  color: #6B8C30;
+  color: #099555;
 }
 .pi-section-white a.pi-link-dark {
   color: #21252b;
 }
 .pi-section-white a.pi-link-dark:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white a.pi-link-white {
   color: #fff;
@@ -1010,13 +1010,13 @@ pre code {
   color: #666e70;
 }
 .pi-section-white a.pi-link-no-style:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-link-dark a {
   color: #21252b;
 }
 .pi-section-white .pi-link-dark a:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .pi-link-white a {
   color: #fff;
@@ -1028,7 +1028,7 @@ pre code {
   color: #666e70;
 }
 .pi-section-white .pi-link-no-style a:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white .lead-20,
 .pi-section-white .lead-22,
@@ -1042,11 +1042,11 @@ pre code {
 }
 .pi-section-white a strong,
 .pi-section-white a b {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-white a strong:hover,
 .pi-section-white a b:hover {
-  color: #6B8C30;
+  color: #099555;
 }
 .pi-section-grey {
   color: #666e70;
@@ -1091,7 +1091,7 @@ pre code {
 .pi-section-grey .h5.pi-has-base-border:after,
 .pi-section-grey h6.pi-has-base-border:after,
 .pi-section-grey .h6.pi-has-base-border:after {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-grey h1.pi-has-bg:after,
 .pi-section-grey .h1.pi-has-bg:after,
@@ -1133,7 +1133,7 @@ pre code {
 .pi-section-grey .h5 a.pi-link-dark:hover,
 .pi-section-grey h6 a.pi-link-dark:hover,
 .pi-section-grey .h6 a.pi-link-dark:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey h1 a.pi-link-white,
 .pi-section-grey .h1 a.pi-link-white,
@@ -1189,7 +1189,7 @@ pre code {
 .pi-section-grey .h5 a.pi-link-no-style:hover,
 .pi-section-grey h6 a.pi-link-no-style:hover,
 .pi-section-grey .h6 a.pi-link-no-style:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey abbr,
 .pi-section-grey acronym,
@@ -1199,16 +1199,16 @@ pre code {
   font-weight: 600;
 }
 .pi-section-grey a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey a:hover {
-  color: #6B8C30;
+  color: #099555;
 }
 .pi-section-grey a.pi-link-dark {
   color: #21252b;
 }
 .pi-section-grey a.pi-link-dark:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey a.pi-link-white {
   color: #fff;
@@ -1220,13 +1220,13 @@ pre code {
   color: #666e70;
 }
 .pi-section-grey a.pi-link-no-style:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-link-dark a {
   color: #21252b;
 }
 .pi-section-grey .pi-link-dark a:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .pi-link-white a {
   color: #fff;
@@ -1238,7 +1238,7 @@ pre code {
   color: #666e70;
 }
 .pi-section-grey .pi-link-no-style a:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey .lead-20,
 .pi-section-grey .lead-22,
@@ -1252,11 +1252,11 @@ pre code {
 }
 .pi-section-grey a strong,
 .pi-section-grey a b {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-grey a strong:hover,
 .pi-section-grey a b:hover {
-  color: #6B8C30;
+  color: #099555;
 }
 .pi-section-dark {
   color: #858d91;
@@ -1301,7 +1301,7 @@ pre code {
 .pi-section-dark .h5.pi-has-base-border:after,
 .pi-section-dark h6.pi-has-base-border:after,
 .pi-section-dark .h6.pi-has-base-border:after {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-dark h1.pi-has-bg:after,
 .pi-section-dark .h1.pi-has-bg:after,
@@ -1343,7 +1343,7 @@ pre code {
 .pi-section-dark .h5 a.pi-link-dark:hover,
 .pi-section-dark h6 a.pi-link-dark:hover,
 .pi-section-dark .h6 a.pi-link-dark:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark h1 a.pi-link-white,
 .pi-section-dark .h1 a.pi-link-white,
@@ -1399,7 +1399,7 @@ pre code {
 .pi-section-dark .h5 a.pi-link-no-style:hover,
 .pi-section-dark h6 a.pi-link-no-style:hover,
 .pi-section-dark .h6 a.pi-link-no-style:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark abbr,
 .pi-section-dark acronym,
@@ -1409,16 +1409,16 @@ pre code {
   font-weight: 600;
 }
 .pi-section-dark a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark a:hover {
-  color: #6B8C30;
+  color: #099555;
 }
 .pi-section-dark a.pi-link-dark {
   color: #ffffff;
 }
 .pi-section-dark a.pi-link-dark:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark a.pi-link-white {
   color: #fff;
@@ -1430,13 +1430,13 @@ pre code {
   color: #858d91;
 }
 .pi-section-dark a.pi-link-no-style:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-link-dark a {
   color: #ffffff;
 }
 .pi-section-dark .pi-link-dark a:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .pi-link-white a {
   color: #fff;
@@ -1448,7 +1448,7 @@ pre code {
   color: #858d91;
 }
 .pi-section-dark .pi-link-no-style a:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark .lead-20,
 .pi-section-dark .lead-22,
@@ -1462,11 +1462,11 @@ pre code {
 }
 .pi-section-dark a strong,
 .pi-section-dark a b {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-dark a strong:hover,
 .pi-section-dark a b:hover {
-  color: #6B8C30;
+  color: #099555;
 }
 .pi-section-parallax {
   color: rgba(250, 250, 250, 0.7);
@@ -1511,7 +1511,7 @@ pre code {
 .pi-section-parallax .h5.pi-has-base-border:after,
 .pi-section-parallax h6.pi-has-base-border:after,
 .pi-section-parallax .h6.pi-has-base-border:after {
-  background: #8eba3e;
+  background: #18ba60;
 }
 .pi-section-parallax h1.pi-has-bg:after,
 .pi-section-parallax .h1.pi-has-bg:after,
@@ -1553,7 +1553,7 @@ pre code {
 .pi-section-parallax .h5 a.pi-link-dark:hover,
 .pi-section-parallax h6 a.pi-link-dark:hover,
 .pi-section-parallax .h6 a.pi-link-dark:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-parallax h1 a.pi-link-white,
 .pi-section-parallax .h1 a.pi-link-white,
@@ -1609,7 +1609,7 @@ pre code {
 .pi-section-parallax .h5 a.pi-link-no-style:hover,
 .pi-section-parallax h6 a.pi-link-no-style:hover,
 .pi-section-parallax .h6 a.pi-link-no-style:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-parallax abbr,
 .pi-section-parallax acronym,
@@ -1619,16 +1619,16 @@ pre code {
   font-weight: 600;
 }
 .pi-section-parallax a {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-parallax a:hover {
-  color: #6B8C30;
+  color: #099555;
 }
 .pi-section-parallax a.pi-link-dark {
   color: #ffffff;
 }
 .pi-section-parallax a.pi-link-dark:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-parallax a.pi-link-white {
   color: #fff;
@@ -1640,13 +1640,13 @@ pre code {
   color: rgba(250, 250, 250, 0.7);
 }
 .pi-section-parallax a.pi-link-no-style:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-parallax .pi-link-dark a {
   color: #ffffff;
 }
 .pi-section-parallax .pi-link-dark a:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-parallax .pi-link-white a {
   color: #fff;
@@ -1658,7 +1658,7 @@ pre code {
   color: rgba(250, 250, 250, 0.7);
 }
 .pi-section-parallax .pi-link-no-style a:hover {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-parallax .lead-20,
 .pi-section-parallax .lead-22,
@@ -1672,11 +1672,11 @@ pre code {
 }
 .pi-section-parallax a strong,
 .pi-section-parallax a b {
-  color: #8eba3e;
+  color: #18ba60;
 }
 .pi-section-parallax a strong:hover,
 .pi-section-parallax a b:hover {
-  color: #6B8C30;
+  color: #099555;
 }
 .pi-icon-circle,
 .pi-icon-square {
@@ -1685,13 +1685,13 @@ pre code {
   text-shadow: 0 1px 0 #fff;
 }
 .pi-icon-base {
-  background: #8eba3e;
+  background: #18ba60;
   color: #fff;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
 .pi-icon-dark {
   background: #2e343c;
-  color: #8eba3e;
+  color: #18ba60;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
 .pi-icon-white {
@@ -1703,7 +1703,7 @@ pre code {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.07);
 }
 .pi-text-base {
-  color: #8eba3e !important;
+  color: #18ba60 !important;
 }
 .pi-text-base-dark {
   color: #007841 !important;
@@ -1713,14 +1713,14 @@ pre code {
   color: #248c49;
 }
 ::selection {
-  background: #6B8C30;
+  background: #099555;
   color: #fff;
 }
 ::-moz-selection {
-  background: #6B8C30;
+  background: #099555;
   color: #fff;
 }
 ::-webkit-selection {
-  background: #6B8C30;
+  background: #099555;
   color: #fff;
 }
